--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,21 @@
 {
-    "short_name": "Radiohub",
-    "name": "Radiohub",
-    "description": "A free, easy-to-use, simple and minimal web template built with Shoelace, designed for creating a radio directory.",
-    "icons": [
-      {
-        "src": "assets/favicon.svg",
-        "type": "image/svg+xml",
-        "sizes": "any"
-      }
-    ],
-    "start_url": "https://digitalmalayali.github.io/Radiohub/",
-    "display": "standalone",
-    "theme_color": "#242428",
-    "background_color": "#242428"
-  }
-  
+  "name": "Liberty Radio",
+  "short_name": "LibertyRadio",
+  "description": "Liberty Radio - Open-source radio directory for independent streams.",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#121212",
+  "theme_color": "#1e88e5",
+  "icons": [
+    {
+      "src": "assets/favicon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/favicon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
