--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,14 @@
   "theme_color": "#1e88e5",
   "icons": [
     {
-      "src": "assets/favicon-192x192.png",
+      "src": "assets/No_Agenda_cover_placeholder.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpeg"
     },
     {
-      "src": "assets/favicon-512x512.png",
+      "src": "assets/No_Agenda_cover_placeholder.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpeg"
     }
   ]
 }
